changes added by PRAMOD

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,21 +2,21 @@
 <div class="row g-5 g-xl-10 mb-5 mb-xl-10">
   <!--begin::Col-->
   <div class="col-md-4">
-    <app-cards-widget20 cssClass="h-md-50 mb-5 mb-xl-10" description="Active Projects" color="#F1416C"
-      ></app-cards-widget20>
+    <app-cards-widget1 cssClass="h-md-50 mb-5 mb-xl-10" color="#F1416C"
+      ></app-cards-widget1>
   </div>
   <!--end::Col-->
-
+  
   <!--begin::Col-->
   <div class="col-md-4">
-    <app-cards-widget20 cssClass="h-md-50 mb-5 mb-xl-10" description="Active Projects" color="#F1416C"
-      ></app-cards-widget20>
+    <app-cards-widget2 cssClass="h-md-50 mb-5 mb-xl-10" color="#1b84ff"
+      ></app-cards-widget2>
   </div>
   <!--end::Col-->
 
    <!--begin::Col-->
    <div class="col-md-4">
-    <app-cards-widget20 cssClass="h-md-50 mb-5 mb-xl-10" description="Active Projects" color="#F1416C"
+    <app-cards-widget20 cssClass="h-md-50 mb-5 mb-xl-10" color="#17c653"
       ></app-cards-widget20>
   </div>
   <!--end::Col-->
