--- a/src/app/_metronic/partials/content/widgets/_new/cards/cards-widget1/cards-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/_new/cards/cards-widget1/cards-widget1.component.html
@@ -1,4 +1,4 @@
-<!--begin::Card widget 20-->
+<!--begin::Card widget 1-->
 <div class="card card-flush bgi-no-repeat bgi-size-contain bgi-position-x-end" [ngClass]="cssClass"
   [ngStyle]="{'background-color': color, 'background-image': 'url(' + img + ')'}">
   <!--begin::Header-->
@@ -7,11 +7,11 @@
     <div class="card-title d-flex flex-column">
       <!--begin::Subtitle-->
       <span class="text-white opacity-75 pt-1 fw-semibold fs-6">
-        Credit Payment
+        Credit O/S
       </span>
       <!--end::Subtitle-->
       <!--begin::Amount-->
-      <span class="fs-2hx fw-bold text-white me-2 lh-1 ls-n2">₹ 8999.99 </span>
+      <span class="fs-2hx fw-bold text-white me-2 lh-1 ls-n2">₹ 1000 </span>
       <!--end::Amount-->
     </div>
     <!--end::Title-->
@@ -31,4 +31,4 @@
   </div>
   <!--end::Card body-->
 </div>
-<!--end::Card widget 20-->
+<!--end::Card widget 1-->
