changes added by PRAMOD

--- a/src/app/_metronic/layout/components/toolbar/toolbar.component.html
+++ b/src/app/_metronic/layout/components/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
     </app-page-title>
   </ng-container>
 
-  <ng-container *ngIf="appToolbarLayout === 'classic'">
+  <!-- <ng-container *ngIf="appToolbarLayout === 'classic'">
     <app-classic class="d-flex align-items-center gap-2 gap-lg-3"></app-classic>
   </ng-container>
   <ng-container *ngIf="appToolbarLayout === 'accounting'">
@@ -22,6 +22,6 @@
   </ng-container>
   <ng-container *ngIf="appToolbarLayout === 'saas'">
     <app-saas class="d-flex align-items-center gap-2" [appPageTitleDisplay]="appPageTitleDisplay"></app-saas>
-  </ng-container>
+  </ng-container> -->
 </div>
 <!--end::Toolbar container-->
