--- a/src/app/_metronic/layout/components/footer/footer.component.html
+++ b/src/app/_metronic/layout/components/footer/footer.component.html
@@ -14,7 +14,7 @@
   <!--begin::Copyright-->
   <div class="text-gray-900 order-2 order-md-1">
     <span class="text-muted fw-semibold me-1">{{currentDateStr}}&copy;</span>
-    <a href="https://keenthemes.com/" target="_blank" class="text-gray-800 text-hover-primary">Keenthemes</a>
+    <a href="https://keenthemes.com/" target="_blank" class="text-gray-800 text-hover-primary">VeelsPlus</a>
   </div>
   <!--end::Copyright-->
 
@@ -24,8 +24,7 @@
 
     <li class="menu-item"><a href="https://devs.keenthemes.com/" target="_blank" class="menu-link px-2">Support</a></li>
 
-    <li class="menu-item"><a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469"
-        target="_blank" class="menu-link px-2">Purchase</a></li>
+    
   </ul>
   <!--end::Menu-->
 
