--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget5/stats-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget5/stats-widget5.component.html
@@ -1,14 +1,10 @@
 <div class="card-body">
-  <span
-    [inlineSVG]="svgIcon"
-    class="svg-icon fs-2x fs-3x ms-n1"
-    [ngClass]="'svg-icon-' + iconColor"
-  ></span>
-  <div [ngClass]="'text-inverse-' + color" class="fw-bolder fs-2 mb-2 mt-5">
+ 
+  <div class="fw-bold" [ngClass]="'text-inverse-' + color + ' fs-7'">
     {{ title }}
   </div>
-
-  <div class="fw-bold" [ngClass]="'text-inverse-' + color + ' fs-7'">
-    {{ description }}
+  <div [ngClass]="'text-inverse-' + color" class="fs-2hx fw-bold text-white me-2 lh-1 ls-n2">
+    ₹ {{ amount }}
   </div>
+
 </div>
