--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,29 +1,33 @@
-<!--begin::Row-->
-<div class="row g-5 g-xl-10 mb-5 mb-xl-10">
-  <!--begin::Col-->
-  <div class="col-md-3">
-    <app-cards-widget1 cssClass="h-md-50 mb-5 mb-xl-10" color="#F1416C"
-      ></app-cards-widget1>
-      
+<!-- begin::Row -->
+<div class="row g-5 g-xl-8">
+  <div class="col-xl-3">
+    <app-stats-widget5
+      class="card bg-danger hoverable card-xl-stretch mb-xl-8"
+      color="danger"
+      iconColor="white"
+      title="Credit O/s"
+    ></app-stats-widget5>
   </div>
-  <!--end::Col-->
-  
-  <!--begin::Col-->
-  <div class="col-md-3">
-    <app-cards-widget2 cssClass="h-md-50 mb-5 mb-xl-10" color="#1b84ff"
-      ></app-cards-widget2>
-  </div>
-  <!--end::Col-->
 
-   <!--begin::Col-->
-   <div class="col-md-3">
-    <app-cards-widget20 cssClass="h-md-50 mb-5 mb-xl-10" color="#17c653"
-      ></app-cards-widget20>
+  <div class="col-xl-3">
+    <app-stats-widget5
+      class="card bg-primary hoverable card-xl-stretch mb-xl-8"
+      color="primary"
+      iconColor="white"
+      title="Credit Sales"
+    ></app-stats-widget5>
   </div>
-  <!--end::Col-->
 
+  <div class="col-xl-3">
+    <app-stats-widget5
+      class="card bg-success hoverable card-xl-stretch mb-5 mb-xl-8"
+      color="success"
+      iconColor="white"
+      title="Credit Payment"
+    ></app-stats-widget5>
+  </div>
 </div>
-<!--end::Row-->
+<!-- end::Row -->
 
 <!--begin::Row-->
 <div class="row gx-5 gx-xl-10">
