--- a/src/app/_metronic/layout/components/header/header.component.html
+++ b/src/app/_metronic/layout/components/header/header.component.html
@@ -22,7 +22,7 @@
     <!--begin::Mobile logo-->
     <div class="d-flex align-items-center flex-grow-1 flex-lg-grow-0">
       <a routerLink="/dashboard" class="d-lg-none">
-        <img alt="Logo" src="./assets/media/logos/default-small.svg" class="h-30px" />
+        <img alt="Logo" src="./assets/media/logos/wheel.png" class="h-30px" />
       </a>
     </div>
     <!--end::Mobile logo-->
@@ -32,15 +32,11 @@
     <!--begin::Logo-->
     <div class="d-flex align-items-center flex-grow-1 flex-lg-grow-0 me-lg-15">
       <a routerLink="/dashboard">
-        <ng-container *ngIf="currentLayoutType === 'dark-header'">
-          <img alt="Logo" src="./assets/media/logos/default-dark.svg"
-            class="h-20px h-lg-30px app-sidebar-logo-default" />
+        <ng-container *ngIf="currentLayoutType === 'dark-sidebar'">
+          <b class="h-25px app-sidebar-logo-default" style="font-size: 35px;">VeelsPlus</b>
         </ng-container>
-        <ng-container *ngIf="currentLayoutType !== 'dark-header'">
-          <img alt="Logo" src="./assets/media/logos/default.svg"
-            class="h-20px h-lg-30px app-sidebar-logo-default theme-light-show" />
-          <img alt="Logo" src="./assets/media/logos/default-dark.svg"
-            class="h-20px h-lg-30px app-sidebar-logo-default theme-dark-show" />
+        <ng-container *ngIf="currentLayoutType !== 'dark-sidebar'">
+          <b class="h-25px app-sidebar-logo-default" style="font-size: 35px;">VeelsPlus</b>
         </ng-container>
       </a>
     </div>
