--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget1/charts-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget1/charts-widget1.component.html
@@ -1,29 +1,9 @@
-<div class="card-header border-0 pt-5">
+<div class="card-header border-0">
   <!-- begin::Title-->
   <h3 class="card-title align-items-start flex-column">
-    <span class="card-label fw-bolder fs-3 mb-1">Recent Statistics</span>
-
-    <span class="text-muted fw-bold fs-7">More than 400 new members</span>
+    <span class="card-label fw-bolder fs-3 mb-1">Monthwise Sales</span>
   </h3>
   <!-- end::Title-->
-
-  <!-- begin::Toolbar-->
-  <div class="card-toolbar">
-    <!-- begin::Menu-->
-    <button
-      type="button"
-      class="btn btn-sm btn-icon btn-color-primary btn-active-light-primary"
-      data-kt-menu-trigger="click"
-      data-kt-menu-placement="bottom-end"
-      data-kt-menu-flip="top-end"
-    >
-      <app-keenicon name="category" class="fs-2"></app-keenicon>
-    </button>
-    <app-dropdown-menu1></app-dropdown-menu1>
-
-    <!-- end::Menu-->
-  </div>
-  <!-- end::Toolbar-->
 </div>
 <!-- end::Header-->
 
