--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget3/lists-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget3/lists-widget3.component.html
@@ -1,34 +1,12 @@
 <!-- begin::Header -->
 <div class="card-header border-0">
-  <h3 class="card-title fw-bolder text-gray-900">Todo</h3>
-  <div class="card-toolbar">
-    <!-- begin::Menu -->
-    <button
-      type="button"
-      class="btn btn-sm btn-icon btn-color-primary btn-active-light-primary"
-      data-kt-menu-trigger="click"
-      data-kt-menu-placement="bottom-end"
-      data-kt-menu-flip="top-end"
-    >
-      <app-keenicon name="category" class="fs-2"></app-keenicon>
-    </button>
-    <app-dropdown-menu1></app-dropdown-menu1>
-    <!-- end::Menu -->
-  </div>
+  <h3 class="card-title fw-bolder text-gray-900">Top 5 Credit O/s</h3>
 </div>
 <!-- end::Header -->
 <!-- begin::Body -->
 <div class="card-body pt-2">
   <!-- begin::Item -->
   <div class="d-flex align-items-center mb-8">
-    <!-- begin::Bullet -->
-    <span class="bullet bullet-vertical h-40px bg-success"></span>
-    <!-- end::Bullet -->
-    <!-- begin::Checkbox -->
-    <div class="form-check form-check-custom form-check-solid mx-5">
-      <input class="form-check-input" type="checkbox" value="" />
-    </div>
-    <!-- end::Checkbox -->
     <!-- begin::Description -->
     <div class="flex-grow-1">
       <a href="#" class="text-gray-800 text-hover-primary fw-bolder fs-6">
@@ -42,14 +20,6 @@
   <!-- end:Item -->
   <!-- begin::Item -->
   <div class="d-flex align-items-center mb-8">
-    <!-- begin::Bullet -->
-    <span class="bullet bullet-vertical h-40px bg-primary"></span>
-    <!-- end::Bullet -->
-    <!-- begin::Checkbox -->
-    <div class="form-check form-check-custom form-check-solid mx-5">
-      <input class="form-check-input" type="checkbox" value="" />
-    </div>
-    <!-- end::Checkbox -->
     <!-- begin::Description -->
     <div class="flex-grow-1">
       <a href="#" class="text-gray-800 text-hover-primary fw-bolder fs-6">
@@ -63,14 +33,6 @@
   <!-- end:Item -->
   <!-- begin::Item -->
   <div class="d-flex align-items-center mb-8">
-    <!-- begin::Bullet -->
-    <span class="bullet bullet-vertical h-40px bg-warning"></span>
-    <!-- end::Bullet -->
-    <!-- begin::Checkbox -->
-    <div class="form-check form-check-custom form-check-solid mx-5">
-      <input class="form-check-input" type="checkbox" value="" />
-    </div>
-    <!-- end::Checkbox -->
     <!-- begin::Description -->
     <div class="flex-grow-1">
       <a href="#" class="text-gray-800 text-hover-primary fw-bolder fs-6">
@@ -84,14 +46,6 @@
   <!-- end:Item -->
   <!-- begin::Item -->
   <div class="d-flex align-items-center mb-8">
-    <!-- begin::Bullet -->
-    <span class="bullet bullet-vertical h-40px bg-primary"></span>
-    <!-- end::Bullet -->
-    <!-- begin::Checkbox -->
-    <div class="form-check form-check-custom form-check-solid mx-5">
-      <input class="form-check-input" type="checkbox" value="" />
-    </div>
-    <!-- end::Checkbox -->
     <!-- begin::Description -->
     <div class="flex-grow-1">
       <a href="#" class="text-gray-800 text-hover-primary fw-bolder fs-6">
@@ -105,14 +59,6 @@
   <!-- end:Item -->
   <!-- begin::Item -->
   <div class="d-flex align-items-center mb-8">
-    <!-- begin::Bullet -->
-    <span class="bullet bullet-vertical h-40px bg-danger"></span>
-    <!-- end::Bullet -->
-    <!-- begin::Checkbox -->
-    <div class="form-check form-check-custom form-check-solid mx-5">
-      <input class="form-check-input" type="checkbox" value="" />
-    </div>
-    <!-- end::Checkbox -->
     <!-- begin::Description -->
     <div class="flex-grow-1">
       <a href="#" class="text-gray-800 text-hover-primary fw-bolder fs-6">
@@ -122,27 +68,6 @@
     </div>
     <!-- end::Description -->
     <span class="badge badge-light-danger fs-8 fw-bolder">New</span>
-  </div>
-  <!-- end:Item -->
-  <!-- begin::Item -->
-  <div class="d-flex align-items-center">
-    <!-- begin::Bullet -->
-    <span class="bullet bullet-vertical h-40px bg-success"></span>
-    <!-- end::Bullet -->
-    <!-- begin::Checkbox -->
-    <div class="form-check form-check-custom form-check-solid mx-5">
-      <input class="form-check-input" type="checkbox" value="" />
-    </div>
-    <!-- end::Checkbox -->
-    <!-- begin::Description -->
-    <div class="flex-grow-1">
-      <a href="#" class="text-gray-800 text-hover-primary fw-bolder fs-6">
-        Customers Update
-      </a>
-      <span class="text-muted fw-bold d-block">Due in 1 week</span>
-    </div>
-    <!-- end::Description -->
-    <span class="badge badge-light-success fs-8 fw-bolder">New</span>
   </div>
   <!-- end:Item -->
 </div>
