changes added by PRAMOD

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,30 +1,18 @@
 <!-- begin::Row -->
 <div class="row g-5 g-xl-8">
   <div class="col-xl-3">
-    <app-stats-widget5
-      class="card bg-danger hoverable card-xl-stretch mb-xl-8"
-      color="danger"
-      iconColor="white"
-      title="Credit O/s"
-    ></app-stats-widget5>
+    <app-stats-widget5 class="card bg-danger hoverable card-xl-stretch mb-xl-8" color="danger" iconColor="white"
+      title="Credit O/s"></app-stats-widget5>
   </div>
 
   <div class="col-xl-3">
-    <app-stats-widget5
-      class="card bg-primary hoverable card-xl-stretch mb-xl-8"
-      color="primary"
-      iconColor="white"
-      title="Credit Sales"
-    ></app-stats-widget5>
+    <app-stats-widget5 class="card bg-primary hoverable card-xl-stretch mb-xl-8" color="primary" iconColor="white"
+      title="Credit Sales"></app-stats-widget5>
   </div>
 
   <div class="col-xl-3">
-    <app-stats-widget5
-      class="card bg-success hoverable card-xl-stretch mb-5 mb-xl-8"
-      color="success"
-      iconColor="white"
-      title="Credit Payment"
-    ></app-stats-widget5>
+    <app-stats-widget5 class="card bg-success hoverable card-xl-stretch mb-5 mb-xl-8" color="success" iconColor="white"
+      title="Credit Payment"></app-stats-widget5>
   </div>
 </div>
 <!-- end::Row -->
