--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -19,7 +19,7 @@
 
     <!-- Pump -->
     <div class="menu-item">
-      <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active">
+      <a class="menu-link without-sub" routerLink="/pumpDashboard" routerLinkActive="active">
         <span class="menu-icon">
           <app-keenicon name="switch" class="fs-2"></app-keenicon>
         </span>
