--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
@@ -1,23 +1,21 @@
 <!-- begin::Header -->
+
 <div class="card-header border-0 pt-5">
   <h3 class="card-title align-items-start flex-column">
-    <span class="card-label fw-bolder fs-3 mb-1">Files</span>
-    <span class="text-muted mt-1 fw-bold fs-7">Over 100 pending files</span>
+    <span class="card-label fw-bolder fs-3 mb-1">Members Statistics</span>
+    <span class="text-muted mt-1 fw-bold fs-7">Over 500 members</span>
   </h3>
-
-  <div class="card-toolbar">
-    <!-- begin::Menu -->
-    <button
-      type="button"
-      class="btn btn-sm btn-icon btn-color-primary btn-active-light-primary"
-      data-kt-menu-trigger="click"
-      data-kt-menu-placement="bottom-end"
-      data-kt-menu-flip="top-end"
-    >
-      <app-keenicon name="category" class="fs-2"></app-keenicon>
-    </button>
-    <app-dropdown-menu1></app-dropdown-menu1>
-    <!-- end::Menu -->
+  <div
+    class="card-toolbar"
+    data-bs-toggle="tooltip"
+    data-bs-placement="top"
+    data-bs-trigger="hover"
+    title="Click to add a user"
+  >
+    <a href="#" class="btn btn-sm btn-light-primary">
+      <app-keenicon name="plus" class="fs-3"></app-keenicon>
+      New Member
+    </a>
   </div>
 </div>
 <!-- end::Header -->
@@ -26,15 +24,31 @@
   <!-- begin::Table container -->
   <div class="table-responsive">
     <!-- begin::Table -->
-    <table class="table align-middle gs-0 gy-3">
+    <table
+      class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4"
+    >
       <!-- begin::Table head -->
       <thead>
-        <tr>
-          <th class="p-0 w-50px"></th>
-          <th class="p-0 min-w-150px"></th>
-          <th class="p-0 min-w-140px"></th>
-          <th class="p-0 min-w-120px"></th>
-          <th class="p-0 min-w-40px"></th>
+        <tr class="fw-bolder text-muted">
+          <th class="w-25px">
+            <div
+              class="
+                form-check form-check-sm form-check-custom form-check-solid
+              "
+            >
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value="1"
+                data-kt-check="true"
+                data-kt-check-target=".widget-9-check"
+              />
+            </div>
+          </th>
+          <th class="min-w-150px">Authors</th>
+          <th class="min-w-140px">Company</th>
+          <th class="min-w-120px">Progress</th>
+          <th class="min-w-100px text-end">Actions</th>
         </tr>
       </thead>
       <!-- end::Table head -->
@@ -42,103 +56,428 @@
       <tbody>
         <tr>
           <td>
-            <div class="symbol symbol-50px me-2">
-              <span class="symbol-label bg-light-success">
-                <app-keenicon name="basket" class="fs-2x text-success"></app-keenicon>
-              </span>
+            <div
+              class="
+                form-check form-check-sm form-check-custom form-check-solid
+              "
+            >
+              <input
+                class="form-check-input widget-9-check"
+                type="checkbox"
+                value="1"
+              />
+            </div>
+          </td>
+          <td>
+            <div class="d-flex align-items-center">
+              <div class="symbol symbol-45px me-5">
+                <img src="./assets/media/avatars/300-14.jpg" alt="" />
+              </div>
+              <div class="d-flex justify-content-start flex-column">
+                <a href="#" class="text-gray-900 fw-bolder text-hover-primary fs-6">
+                  Ana Simmons
+                </a>
+                <span class="text-muted fw-bold text-muted d-block fs-7">
+                  HTML, JS, ReactJS
+                </span>
+              </div>
             </div>
           </td>
           <td>
             <a
               href="#"
-              class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6"
+              class="text-gray-900 fw-bolder text-hover-primary d-block fs-6"
             >
-              Top Authors
+              Intertico
             </a>
+            <span class="text-muted fw-bold text-muted d-block fs-7">
+              Web, UI/UX Design
+            </span>
           </td>
-          <td class="text-end text-muted fw-bold">ReactJs, HTML</td>
-          <td class="text-end text-muted fw-bold">4600 Users</td>
-          <td class="text-end text-gray-900 fw-bolder fs-6 pe-0">5.4MB</td>
+          <td class="text-end">
+            <div class="d-flex flex-column w-100 me-2">
+              <div class="d-flex flex-stack mb-2">
+                <span class="text-muted me-2 fs-7 fw-bold">50%</span>
+              </div>
+              <div class="progress h-6px w-100">
+                <div
+                  class="progress-bar bg-primary"
+                  role="progressbar"
+                  [style.width]="'50%'"
+                ></div>
+              </div>
+            </div>
+          </td>
+          <td>
+            <div class="d-flex justify-content-end flex-shrink-0">
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="switch" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="pencil" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                "
+              >
+                <app-keenicon name="trash" class="fs-3"></app-keenicon>
+              </a>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>
-            <div class="symbol symbol-50px me-2">
-              <span class="symbol-label bg-light-danger">
-                <app-keenicon name="category" class="fs-2x text-danger"></app-keenicon>
-              </span>
+            <div
+              class="
+                form-check form-check-sm form-check-custom form-check-solid
+              "
+            >
+              <input
+                class="form-check-input widget-9-check"
+                type="checkbox"
+                value="1"
+              />
+            </div>
+          </td>
+          <td>
+            <div class="d-flex align-items-center">
+              <div class="symbol symbol-45px me-5">
+                <img src="./assets/media/avatars/300-2.jpg" alt="" />
+              </div>
+              <div class="d-flex justify-content-start flex-column">
+                <a href="#" class="text-gray-900 fw-bolder text-hover-primary fs-6">
+                  Jessie Clarcson
+                </a>
+                <span class="text-muted fw-bold text-muted d-block fs-7">
+                  C#, ASP.NET, MS SQL
+                </span>
+              </div>
             </div>
           </td>
           <td>
             <a
               href="#"
-              class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6"
+              class="text-gray-900 fw-bolder text-hover-primary d-block fs-6"
             >
-              Popular Authors
+              Agoda
             </a>
+            <span class="text-muted fw-bold text-muted d-block fs-7">
+              Houses &amp; Hotels
+            </span>
           </td>
-          <td class="text-end text-muted fw-bold">Python, MySQL</td>
-          <td class="text-end text-muted fw-bold">7200 Users</td>
-          <td class="text-end text-gray-900 fw-bolder fs-6 pe-0">2.8MB</td>
+          <td class="text-end">
+            <div class="d-flex flex-column w-100 me-2">
+              <div class="d-flex flex-stack mb-2">
+                <span class="text-muted me-2 fs-7 fw-bold">70%</span>
+              </div>
+              <div class="progress h-6px w-100">
+                <div
+                  class="progress-bar bg-danger"
+                  role="progressbar"
+                  [style.width]="'70%'"
+                ></div>
+              </div>
+            </div>
+          </td>
+          <td>
+            <div class="d-flex justify-content-end flex-shrink-0">
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="switch" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="pencil" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                "
+              >
+                <app-keenicon name="trash" class="fs-3"></app-keenicon>
+              </a>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>
-            <div class="symbol symbol-50px me-2">
-              <span class="symbol-label bg-light-info">
-                <app-keenicon name="briefcase" class="fs-2x text-info"></app-keenicon>
-              </span>
+            <div
+              class="
+                form-check form-check-sm form-check-custom form-check-solid
+              "
+            >
+              <input
+                class="form-check-input widget-9-check"
+                type="checkbox"
+                value="1"
+              />
+            </div>
+          </td>
+          <td>
+            <div class="d-flex align-items-center">
+              <div class="symbol symbol-45px me-5">
+                <img src="./assets/media/avatars/300-5.jpg" alt="" />
+              </div>
+              <div class="d-flex justify-content-start flex-column">
+                <a href="#" class="text-gray-900 fw-bolder text-hover-primary fs-6">
+                  Lebron Wayde
+                </a>
+                <span class="text-muted fw-bold text-muted d-block fs-7">
+                  PHP, Laravel, VueJS
+                </span>
+              </div>
             </div>
           </td>
           <td>
             <a
               href="#"
-              class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6"
+              class="text-gray-900 fw-bolder text-hover-primary d-block fs-6"
             >
-              New Users
+              RoadGee
             </a>
+            <span class="text-muted fw-bold text-muted d-block fs-7"
+              >Transportation</span
+            >
           </td>
-          <td class="text-end text-muted fw-bold">Laravel, Metronic</td>
-          <td class="text-end text-muted fw-bold">890 Users</td>
-          <td class="text-end text-gray-900 fw-bolder fs-6 pe-0">1.5MB</td>
+          <td class="text-end">
+            <div class="d-flex flex-column w-100 me-2">
+              <div class="d-flex flex-stack mb-2">
+                <span class="text-muted me-2 fs-7 fw-bold">60%</span>
+              </div>
+              <div class="progress h-6px w-100">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  [style.width]="'60%'"
+                ></div>
+              </div>
+            </div>
+          </td>
+          <td>
+            <div class="d-flex justify-content-end flex-shrink-0">
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="switch" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="pencil" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                "
+              >
+                <app-keenicon name="trash" class="fs-3"></app-keenicon>
+              </a>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>
-            <div class="symbol symbol-50px me-2">
-              <span class="symbol-label bg-light-warning"
-                ><app-keenicon name="abstract-26" class="fs-2x text-warning"></app-keenicon>
-              </span>
+            <div
+              class="
+                form-check form-check-sm form-check-custom form-check-solid
+              "
+            >
+              <input
+                class="form-check-input widget-9-check"
+                type="checkbox"
+                value="1"
+              />
+            </div>
+          </td>
+          <td>
+            <div class="d-flex align-items-center">
+              <div class="symbol symbol-45px me-5">
+                <img src="./assets/media/avatars/300-20.jpg" alt="" />
+              </div>
+              <div class="d-flex justify-content-start flex-column">
+                <a href="#" class="text-gray-900 fw-bolder text-hover-primary fs-6">
+                  Natali Goodwin
+                </a>
+                <span class="text-muted fw-bold text-muted d-block fs-7">
+                  Python, PostgreSQL, ReactJS
+                </span>
+              </div>
             </div>
           </td>
           <td>
             <a
               href="#"
-              class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6"
+              class="text-gray-900 fw-bolder text-hover-primary d-block fs-6"
             >
-              Active Customers
+              The Hill
             </a>
+            <span class="text-muted fw-bold text-muted d-block fs-7"
+              >Insurance</span
+            >
           </td>
-          <td class="text-end text-muted fw-bold">AngularJS, C#</td>
-          <td class="text-end text-muted fw-bold">4600 Users</td>
-          <td class="text-end text-gray-900 fw-bolder fs-6 pe-0">5.4MB</td>
+          <td class="text-end">
+            <div class="d-flex flex-column w-100 me-2">
+              <div class="d-flex flex-stack mb-2">
+                <span class="text-muted me-2 fs-7 fw-bold">50%</span>
+              </div>
+              <div class="progress h-6px w-100">
+                <div
+                  class="progress-bar bg-warning"
+                  role="progressbar"
+                  [style.width]="'50%'"
+                ></div>
+              </div>
+            </div>
+          </td>
+          <td>
+            <div class="d-flex justify-content-end flex-shrink-0">
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="switch" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="pencil" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                "
+              >
+                <app-keenicon name="trash" class="fs-3"></app-keenicon>
+              </a>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>
-            <div class="symbol symbol-50px me-2">
-              <span class="symbol-label bg-light-primary">
-                <app-keenicon name="abstract-41" class="fs-2x text-primary"></app-keenicon>
-              </span>
+            <div
+              class="
+                form-check form-check-sm form-check-custom form-check-solid
+              "
+            >
+              <input
+                class="form-check-input widget-9-check"
+                type="checkbox"
+                value="1"
+              />
+            </div>
+          </td>
+          <td>
+            <div class="d-flex align-items-center">
+              <div class="symbol symbol-45px me-5">
+                <img src="./assets/media/avatars/300-23.jpg" alt="" />
+              </div>
+              <div class="d-flex justify-content-start flex-column">
+                <a href="#" class="text-gray-900 fw-bolder text-hover-primary fs-6">
+                  Kevin Leonard
+                </a>
+                <span class="text-muted fw-bold text-muted d-block fs-7">
+                  HTML, JS, ReactJS
+                </span>
+              </div>
             </div>
           </td>
           <td>
             <a
               href="#"
-              class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6"
+              class="text-gray-900 fw-bolder text-hover-primary d-block fs-6"
             >
-              Active Customers
+              RoadGee
             </a>
+            <span class="text-muted fw-bold text-muted d-block fs-7"
+              >Art Director</span
+            >
           </td>
-          <td class="text-end text-muted fw-bold">ReactJS, Ruby</td>
-          <td class="text-end text-muted fw-bold">354 Users</td>
-          <td class="text-end text-gray-900 fw-bolder fs-6 pe-0">500KB</td>
+          <td class="text-end">
+            <div class="d-flex flex-column w-100 me-2">
+              <div class="d-flex flex-stack mb-2">
+                <span class="text-muted me-2 fs-7 fw-bold">90%</span>
+              </div>
+              <div class="progress h-6px w-100">
+                <div
+                  class="progress-bar bg-info"
+                  role="progressbar"
+                  [style.width]="'90%'"
+                ></div>
+              </div>
+            </div>
+          </td>
+          <td>
+            <div class="d-flex justify-content-end flex-shrink-0">
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="switch" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                  me-1
+                "
+              >
+                <app-keenicon name="pencil" class="fs-3"></app-keenicon>
+              </a>
+              <a
+                href="#"
+                class="
+                  btn btn-icon btn-bg-light btn-active-color-primary btn-sm
+                "
+              >
+                <app-keenicon name="trash" class="fs-3"></app-keenicon>
+              </a>
+            </div>
+          </td>
         </tr>
       </tbody>
       <!-- end::Table body -->
