--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget2/tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget2/tables-widget2.component.html
@@ -8,9 +8,9 @@
     data-bs-toggle="tooltip"
     data-bs-placement="top"
     data-bs-trigger="hover"
-    title="Click to add a user"
+    title="Click to add Infra"
   >
-    <a href="#" class="btn btn-sm btn-light-primary">
+    <a class="btn btn-sm btn-light-primary" (click)="addInfra()">
       <app-keenicon name="plus" class="fs-3"></app-keenicon>
       Add Infra
     </a>
