--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget1/tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget1/tables-widget1.component.html
@@ -8,7 +8,7 @@
   data-bs-toggle="tooltip"
   data-bs-placement="top"
   data-bs-trigger="hover"
-  title="Click to add a user"
+  title="Click to add Rate"
 >
   <a (click)="openModal()" class="btn btn-sm btn-light-primary">
     <app-keenicon name="plus" class="fs-3"></app-keenicon>
