--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
@@ -3,34 +3,43 @@
     .btn.btn-icon.badge.badge-light-success {
       background-color: #DFFFEA;
       color: #DFFFEA;
-      transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+      transition: background-color 0.3s, color 0.3s;
+      /* Smooth transition */
     }
 
     .btn.btn-icon.badge.badge-light-success:hover {
-      background-color: #17C653; /* Change to success color */
-      color: #17C653; /* Change text color if needed */
+      background-color: #17C653;
+      /* Change to success color */
+      color: #17C653;
+      /* Change text color if needed */
     }
 
     .btn.btn-icon.badge.badge-light-warning {
       background-color: #FFF8DD;
       color: #FFF8DD;
-      transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+      transition: background-color 0.3s, color 0.3s;
+      /* Smooth transition */
     }
 
     .btn.btn-icon.badge.badge-light-warning:hover {
-      background-color: #F6C000; /* Change to  color */
-      color: #F6C000; /* Change text color if needed */
+      background-color: #F6C000;
+      /* Change to  color */
+      color: #F6C000;
+      /* Change text color if needed */
     }
 
     .btn.btn-icon.badge.badge-light-danger {
       background-color: #FFEEF3;
       color: #FFEEF3;
-      transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+      transition: background-color 0.3s, color 0.3s;
+      /* Smooth transition */
     }
 
     .btn.btn-icon.badge.badge-light-danger:hover {
-      background-color: #F8285A; /* Change to  color */
-      color: #F8285A; /* Change text color if needed */
+      background-color: #F8285A;
+      /* Change to  color */
+      color: #F8285A;
+      /* Change text color if needed */
     }
   </style>
 </head>
@@ -48,10 +57,13 @@
   </span>
   <div class="card-toolbar" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-trigger="hover"
     title="Click to add a user">
-    <a href="#" class="btn btn-sm btn-light-primary">
+    <a (click)="openModal()" class="btn btn-sm btn-light-primary">
       <app-keenicon name="plus" class="fs-3"></app-keenicon>
       New Staff
     </a>
+    <app-modal2 #modal [modalConfig]="modalConfig">
+      Modal body html
+    </app-modal2>
   </div>
 </div>
 <!-- end::Header -->
@@ -115,9 +127,6 @@
           </td>
 
           <td>
-            <span *ngIf="data.accessGroupId == 12" class="badge badge-light-danger fs-6 fw-bolder">
-              {{ data.salary }}
-            </span>
             <span *ngIf="data.accessGroupId == 14" class="badge badge-light-warning fs-6 fw-bolder">
               {{ data.salary }}
             </span>
@@ -127,17 +136,19 @@
           </td>
 
           <td>
-            <div class="d-flex justify-content-center flex-shrink-0">
-              <a class="btn btn-icon badge badge-light-success">
-                <app-keenicon name="switch" class="fs-3"></app-keenicon>
-              </a>
-              <a class="btn btn-icon badge badge-light-warning">
-                <app-keenicon name="pencil" class="fs-3"></app-keenicon>
-              </a>
-              <a class="btn btn-icon badge badge-light-danger">
-                <app-keenicon name="trash" class="fs-3"></app-keenicon>
-              </a>
-            </div>
+            <span *ngIf="data.accessGroupId != 12">
+              <div class="d-flex justify-content-center flex-shrink-0">
+                <a class="btn btn-icon badge badge-light-success">
+                  <app-keenicon name="switch" class="fs-3"></app-keenicon>
+                </a>
+                <a class="btn btn-icon badge badge-light-warning">
+                  <app-keenicon name="pencil" class="fs-3"></app-keenicon>
+                </a>
+                <a class="btn btn-icon badge badge-light-danger">
+                  <app-keenicon name="trash" class="fs-3"></app-keenicon>
+                </a>
+              </div>
+            </span>
           </td>
 
         </tr>
