--- a/src/app/modules/wizards/steps/step3/step3.component.html
+++ b/src/app/modules/wizards/steps/step3/step3.component.html
@@ -1,97 +1,30 @@
-<div class="pb-10 pb-lg-12">
-  <h2 class="fw-bolder text-gray-900">Business Details</h2>
-  <div class="text-gray-500 fw-bold fs-6">
-    If you need more info, please check out
-    <a href="#" class="link-primary fw-bolder">Help Page</a>.
-  </div>
-</div>
-<div [formGroup]="form">
-  <div class="fv-row mb-10">
-    <label class="form-label required">Business Name</label
-    ><input
-      name="businessName"
-      class="form-control form-control-lg form-control-solid"
-      formControlName="businessName"
-    />
-    <div
-      class="fv-plugins-message-container invalid-feedback"
-      *ngIf="
-        form.get('businessName')?.hasError('required') &&
-        form.get('businessName')?.touched
-      "
-    >
-      Business Name is required
-    </div>
-  </div>
-  <div class="fv-row mb-10">
-    <label class="d-flex align-items-center form-label"
-      ><span class="required">Shortened Descriptor</span></label
-    ><input
-      name="businessDescriptor"
-      class="form-control form-control-lg form-control-solid"
-      formControlName="businessDescriptor"
-    />
-    <div
-      class="fv-plugins-message-container invalid-feedback"
-      *ngIf="
-        form.get('businessDescriptor')?.hasError('required') &&
-        form.get('businessDescriptor')?.touched
-      "
-    >
-      Shortened Descriptor is required
-    </div>
-    <div class="form-text">
-      Customers will see this shortened version of your statement descriptor
-    </div>
-  </div>
-  <div class="fv-row mb-10">
-    <label class="form-label required">Corporation Type</label
-    ><select
-      name="businessType"
-      class="form-select form-select-lg form-select-solid"
-      formControlName="businessType"
-    >
-      <option value="1">S Corporation</option>
-      <option value="1">C Corporation</option>
-      <option value="2">Sole Proprietorship</option>
-      <option value="3">Non-profit</option>
-      <option value="4">Limited Liability</option>
-      <option value="5">General Partnership</option>
-    </select>
-  </div>
-  <div class="fv-row mb-10">
-    <label class="form-label">Business Description</label
-    ><textarea
-      name="businessDescription"
-      class="form-control form-control-lg form-control-solid"
-      rows="3"
-      formControlName="businessDescription"
-    ></textarea>
-  </div>
-  <div class="fv-row mb-0">
-    <label class="fs-6 fw-bold form-label required">Contact Email</label
-    ><input
-      name="businessEmail"
-      class="form-control form-control-lg form-control-solid"
-      formControlName="businessEmail"
-    />
-    <div
-      class="fv-plugins-message-container invalid-feedback"
-      *ngIf="
-        form.get('businessEmail')?.hasError('required') &&
-        form.get('businessEmail')?.touched
-      "
-    >
-      Contact Email is required
-    </div>
-    <div
-      class="fv-plugins-message-container invalid-feedback"
-      *ngIf="
-        form.get('businessEmail')?.hasError('email') &&
-        form.get('businessEmail')?.touched
-      "
-    >
-      Wrong email format
+<div class="card mb-5 mb-xl-10">
+  <div class="card-body pt-9 pb-0">
+    <div class="d-flex flex-wrap flex-sm-nowrap mb-3">
+
+      <div class="card-toolbar col-lg-6" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-trigger="hover"
+        title="Click to add Previous O/S">
+        <a (click)="openModal()" class="btn btn-sm btn-light-primary"  style="width: 250px;">
+          <app-keenicon name="plus" class="fs-3"></app-keenicon>
+          Add Previous Outstanding
+        </a>
+        <app-modal2 #modal [modalConfig]="modalConfig">
+          Modal body html
+        </app-modal2>
+      </div>
+      <br>
+      
+      <div class="card-toolbar" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-trigger="hover"
+        title="Click to add Vehicle">
+        <a (click)="openModal()" class="btn btn-sm btn-light-primary">
+          <app-keenicon name="plus" class="fs-3"></app-keenicon>
+          Add Vehicle
+        </a>
+        <!-- <app-modal2 #modal [modalConfig]="modalConfig">
+          Modal body html
+        </app-modal2> -->
+      </div>
+
     </div>
   </div>
 </div>
