changes added by PRAMOD

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -50,34 +50,34 @@
   <ul ngbNav #dashboard="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 50%;">
     <li [ngbNavItem]="1">
       <a ngbNavLink>
-        <span class="d-none d-sm-block" style="font-size: 13.5px;">DASHBOARD 1</span>
+        <span class="d-none d-sm-block" style="font-size: 15px;">DASHBOARD 1</span>
       </a>
       <ng-template ngbNavContent>
-        <app-tables-widget6 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget6>
+        <app-dashboard1></app-dashboard1>
       </ng-template>
     </li>
     <li [ngbNavItem]="2">
       <a ngbNavLink>
-        <span class="d-none d-sm-block" style="font-size: 13.5px;">DASHBOARD 2</span>
+        <span class="d-none d-sm-block" style="font-size: 15px;">DASHBOARD 2</span>
       </a>
       <ng-template ngbNavContent>
-        <app-tables-widget7 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget7>
+        <app-dashboard2></app-dashboard2>
       </ng-template>
     </li>
     <li [ngbNavItem]="3">
       <a ngbNavLink>
-        <span class="d-none d-sm-block" style="font-size: 13.5px;">DASHBOARD 3</span>
+        <span class="d-none d-sm-block" style="font-size: 15px;">DASHBOARD 3</span>
       </a>
       <ng-template ngbNavContent>
-        <app-tables-widget8 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget8>
+        <app-dashboard3></app-dashboard3>
       </ng-template>
     </li>
     <li [ngbNavItem]="4">
       <a ngbNavLink>
-        <span class="d-none d-sm-block" style="font-size: 13.5px;">DASHBOARD 4</span>
+        <span class="d-none d-sm-block" style="font-size: 15px;">DASHBOARD 4</span>
       </a>
       <ng-template ngbNavContent>
-        <app-tables-widget9 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget9>
+        <app-dashboard4></app-dashboard4>
       </ng-template>
     </li>
   </ul>
